// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HTTPIntegrationEvent /> component should render a loader because the component has an empty event 1`] = `
<Loader
  inline={false}
  minHeight="500px"
  size="40px"
/>
`;

exports[`<HTTPIntegrationEvent /> component should render a loader because the component has no event 1`] = `
<Loader
  inline={false}
  minHeight="500px"
  size="40px"
/>
`;

exports[`<HTTPIntegrationEvent /> component should render a loader while the component is fetching an event 1`] = `
<Loader
  inline={false}
  minHeight="500px"
  size="40px"
/>
`;

exports[`<HTTPIntegrationEvent /> component should render the data of HTTP request (Empty bodies) 1`] = `
<Container
  className="page-container"
  fluid={true}
  tag="div"
>
  <Row
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      className="request mb-4"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Request
        </h2>
        <HTTPIntegrationEventItem
          name="Method"
          value="GET"
        />
        <HTTPIntegrationEventItem
          name="URL"
          value="https://developers.gorgias.com"
        />
        <HTTPIntegrationEventItem
          name="Sent"
        >
          <Connect(DatetimeLabelContainer)
            dateTime="nowTimestamp"
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
          value={
            Immutable.Map {
              "headersKey1": "headersValue1",
            }
          }
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Params"
          value={null}
        />
        <HTTPIntegrationEventItem
          name="Body"
          value={null}
        />
      </Container>
    </Col>
    <Col
      className="response"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Response
        </h2>
        <HTTPIntegrationEventItem
          name="Status code"
        >
          <HTTPStatusLabel />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Body"
          value={null}
        />
      </Container>
    </Col>
  </Row>
</Container>
`;

exports[`<HTTPIntegrationEvent /> component should render the data of HTTP request (JSON bodies) 1`] = `
<Container
  className="page-container"
  fluid={true}
  tag="div"
>
  <Row
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      className="request mb-4"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Request
        </h2>
        <HTTPIntegrationEventItem
          name="Method"
          value="GET"
        />
        <HTTPIntegrationEventItem
          name="URL"
          value="https://developers.gorgias.com"
        />
        <HTTPIntegrationEventItem
          name="Sent"
        >
          <Connect(DatetimeLabelContainer)
            dateTime="nowTimestamp"
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
          value={
            Immutable.Map {
              "headersKey1": "headersValue1",
            }
          }
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Params"
          value={
            Immutable.Map {
              "paramKey1": "paramValue1",
            }
          }
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "paramKey1": "paramValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Body"
          value="{
    \\"bodyKey1\\": \\"bodyValue1\\"
}"
        >
          <InputField
            readOnly={true}
            rows={3}
            type="textarea"
            value="{
    \\"bodyKey1\\": \\"bodyValue1\\"
}"
          />
        </HTTPIntegrationEventItem>
      </Container>
    </Col>
    <Col
      className="response"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Response
        </h2>
        <HTTPIntegrationEventItem
          name="Status code"
        >
          <HTTPStatusLabel />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Body"
          value="{
    \\"bodyKey1\\": \\"bodyValue1\\"
}"
        >
          <InputField
            readOnly={true}
            rows={3}
            type="textarea"
            value="{
    \\"bodyKey1\\": \\"bodyValue1\\"
}"
          />
        </HTTPIntegrationEventItem>
      </Container>
    </Col>
  </Row>
</Container>
`;

exports[`<HTTPIntegrationEvent /> component should render the data of a HTTP request (html response) 1`] = `
<Container
  className="page-container"
  fluid={true}
  tag="div"
>
  <Row
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      className="request mb-4"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Request
        </h2>
        <HTTPIntegrationEventItem
          name="Method"
          value="GET"
        />
        <HTTPIntegrationEventItem
          name="URL"
          value="https://developers.gorgias.com"
        />
        <HTTPIntegrationEventItem
          name="Sent"
        >
          <Connect(DatetimeLabelContainer)
            dateTime="nowTimestamp"
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
          value={
            Immutable.Map {
              "headersKey1": "headersValue1",
            }
          }
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Params"
          value={
            Immutable.Map {
              "paramKey1": "paramValue1",
            }
          }
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "paramKey1": "paramValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Body"
          value={
            Immutable.Map {
              "bodyKey1": "bodyValue1",
            }
          }
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "bodyKey1": "bodyValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
      </Container>
    </Col>
    <Col
      className="response"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Response
        </h2>
        <HTTPIntegrationEventItem
          name="Status code"
        >
          <HTTPStatusLabel />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Body"
          value="<html><body>Hello world!</body></html>"
        >
          <InputField
            readOnly={true}
            rows={1}
            type="textarea"
            value="<html><body>Hello world!</body></html>"
          />
        </HTTPIntegrationEventItem>
      </Container>
    </Col>
  </Row>
</Container>
`;

exports[`<HTTPIntegrationEvent /> component should render the data of the HTTP request when there was an error making the request 1`] = `
<Container
  className="page-container"
  fluid={true}
  tag="div"
>
  <Row
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      className="request mb-4"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Request
        </h2>
        <HTTPIntegrationEventItem
          name="Method"
          value="GET"
        />
        <HTTPIntegrationEventItem
          name="URL"
          value="https://developers.gorgias.com"
        />
        <HTTPIntegrationEventItem
          name="Sent"
        >
          <Connect(DatetimeLabelContainer)
            dateTime="nowTimestamp"
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
          value={
            Immutable.Map {
              "headersKey1": "headersValue1",
            }
          }
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Params"
          value={null}
        />
        <HTTPIntegrationEventItem
          name="Body"
          value={null}
        />
      </Container>
    </Col>
    <Col
      className="response"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Response
        </h2>
        <HTTPIntegrationEventItem
          name="Status code"
        >
          <HTTPStatusLabel />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Body"
          value={null}
        />
        <HTTPIntegrationEventItem
          name="Error"
        >
          <pre>
            There was an error while making this request. This can happen for multiple reasons:
- there is a typo in the request URL
- the server you're trying to reach is not running right now
- the server you're trying to reach is not returning a response fast enough (timeout)
- the DNS records for this URL are not propagated yet
- ...

Please double check that the request you're trying to make should work, using tools like cURL or Postman for example, and if it is the case please reach out to us at "support@gorgias.com". Details:

There is an error
          </pre>
        </HTTPIntegrationEventItem>
      </Container>
    </Col>
  </Row>
</Container>
`;

exports[`<HTTPIntegrationEvent /> component should render the data of the HTTP request when there was an error making the request and the default message is already in the event 1`] = `
<Container
  className="page-container"
  fluid={true}
  tag="div"
>
  <Row
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      className="request mb-4"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Request
        </h2>
        <HTTPIntegrationEventItem
          name="Method"
          value="GET"
        />
        <HTTPIntegrationEventItem
          name="URL"
          value="https://developers.gorgias.com"
        />
        <HTTPIntegrationEventItem
          name="Sent"
        >
          <Connect(DatetimeLabelContainer)
            dateTime="nowTimestamp"
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
          value={
            Immutable.Map {
              "headersKey1": "headersValue1",
            }
          }
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Params"
          value={null}
        />
        <HTTPIntegrationEventItem
          name="Body"
          value={null}
        />
      </Container>
    </Col>
    <Col
      className="response"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Response
        </h2>
        <HTTPIntegrationEventItem
          name="Status code"
        >
          <HTTPStatusLabel />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Body"
          value={null}
        />
        <HTTPIntegrationEventItem
          name="Error"
        >
          <pre>
            There was an error while making this request. Foo bar. There is an error.
          </pre>
        </HTTPIntegrationEventItem>
      </Container>
    </Col>
  </Row>
</Container>
`;

exports[`<HTTPIntegrationEvent /> component should render the data of the HTTP request with GET method and JSON Params, with a warning 1`] = `
<Container
  className="page-container"
  fluid={true}
  tag="div"
>
  <Row
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      className="request mb-4"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Request
        </h2>
        <HTTPIntegrationEventItem
          name="Method"
          value="GET"
        />
        <HTTPIntegrationEventItem
          name="URL"
          value="https://developers.gorgias.com"
        />
        <HTTPIntegrationEventItem
          name="Sent"
        >
          <Connect(DatetimeLabelContainer)
            dateTime="nowTimestamp"
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
          value={
            Immutable.Map {
              "headersKey1": "headersValue1",
            }
          }
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Params"
          value="\\"{\\"paramKey1\\": \\"paramValue1\\"}\\""
        >
          <HTTPIntegrationEventParams
            params="\\"{\\"paramKey1\\": \\"paramValue1\\"}\\""
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Body"
          value="{
    \\"bodyKey1\\": \\"bodyValue1\\"
}"
        >
          <InputField
            readOnly={true}
            rows={3}
            type="textarea"
            value="{
    \\"bodyKey1\\": \\"bodyValue1\\"
}"
          />
        </HTTPIntegrationEventItem>
      </Container>
    </Col>
    <Col
      className="response"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Response
        </h2>
        <HTTPIntegrationEventItem
          name="Status code"
        >
          <HTTPStatusLabel />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Body"
          value="{
    \\"bodyKey1\\": \\"bodyValue1\\"
}"
        >
          <InputField
            readOnly={true}
            rows={3}
            type="textarea"
            value="{
    \\"bodyKey1\\": \\"bodyValue1\\"
}"
          />
        </HTTPIntegrationEventItem>
      </Container>
    </Col>
  </Row>
</Container>
`;

exports[`<HTTPIntegrationEvent /> component should render the error that occurred before we could send the request 1`] = `
<Container
  className="page-container"
  fluid={true}
  tag="div"
>
  <Row
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      className="mb-4"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <h2
        className="mb-4"
      >
        Error
      </h2>
      <p>
        The following error occurred before we could send the request:
      </p>
      <pre>
        Only HTTPS scheme is allowed
      </pre>
    </Col>
  </Row>
</Container>
`;
